# TB-02-Code

./: .replit  app.py  config.py  pyproject.toml
docs/: HARDWARE_SETUP.md  INSTALLATION.md
hardware/: battery_monitor.py  camera_stream.py  mock_gpio.py  mock_picamera.py  motor_controller.py  servo_controller.py
setup/: deploy_config.json  deploy_wizard.py
static/css/: style.css
static/js/: controller.js  joystick.js
templates/: index.html
